fix wallet name alignment

--- a/app/components/views/GetStartedPage/GetStarted.module.css
+++ b/app/components/views/GetStartedPage/GetStarted.module.css
@@ -348,7 +348,7 @@
   background-color: var(--background-back-color);
 }
 
-.displayWalletName {
+.displayWallet.new .displayWalletName {
   color: var(--new_wallet-label);
   margin-top: 20px;
 }
